--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "frontend",
+  "name": "stadium-booking-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A mobile application for stadium seat booking and management",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,20 +10,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-navigation/bottom-tabs": "^7.12.0",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.12.0",
-    "expo": "~54.0.33",
-    "expo-linear-gradient": "^15.0.8",
-    "expo-status-bar": "~3.0.9",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-reanimated": "^4.2.1",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0"
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "expo": "~52.0.27",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
